+PI, +COM_TIME, -+INTEGRAL

--- a/first_task/CMakeLists.txt
+++ b/first_task/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 project("PARPROGA 1")
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD 17)
 SET(MYCOMPILE_FLAGS "-pthread")
 
 SET(CMAKE_C_FLAGS    "${CMAKE_C_FLAGS} ${MYCOMPILE_FLAGS}")
@@ -10,9 +10,29 @@ find_package(MPI)
 
 file(GLOB SRC "code/src/*")
 
-add_executable(parproga_1 ${SRC})
 
-include_directories(SYSTEM ${MPI_INCLUDE_PATH})
 
-target_link_libraries(parproga_1 ${MPI_C_LIBRARIES})
-target_include_directories(parproga_1 PUBLIC "code/include")
+add_custom_target(PI ALL
+  COMMAND mpic++ ${CMAKE_CURRENT_SOURCE_DIR}/src/pi.cpp -o ${CMAKE_CURRENT_BINARY_DIR}/pi
+) # mpiexec -n 16 ./pi
+
+
+add_custom_target(COMMUNICATION_TIME ALL
+  COMMAND mpic++ ${CMAKE_CURRENT_SOURCE_DIR}/src/communication_time.cpp -o ${CMAKE_CURRENT_BINARY_DIR}/com_time
+) # mpiexec -n 16 ./com_time
+
+
+# add_custom_target(INTEGRAL ALL
+#   COMMAND mpic++ ${CMAKE_CURRENT_SOURCE_DIR}/src/integral.cpp -o ${CMAKE_CURRENT_BINARY_DIR}/integral
+# ) # mpiexec -n 16 ./integral
+
+add_executable(integral src/integral.cpp)
+# target_compile_options()
+
+
+# add_custom_command(TARGET MAIN_PROG POST_BUILD
+#   COMMAND mpiexec -n 2 ${CMAKE_CURRENT_BINARY_DIR}/main
+#   COMMENT "Запуск MAIN_PROG..."
+# )
+
+add_executable(test src/trash.cpp)
