--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,18 @@ cmake_minimum_required(VERSION 3.16)
 project("PARPROGA 1")
 set(CMAKE_CXX_STANDARD 17)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+
 SET(MYCOMPILE_FLAGS "-pthread")
 SET(CMAKE_C_FLAGS    "${CMAKE_C_FLAGS} ${MYCOMPILE_FLAGS}")
 SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${MYCOMPILE_FLAGS}")
-
 
 find_package(MPI)
 
 file(GLOB SRC "code/src/*")
 
+add_subdirectory(7_sem)
 
 add_custom_target(PI ALL
   COMMAND mpic++ ${CMAKE_CURRENT_SOURCE_DIR}/src/pi.cpp -o ${CMAKE_CURRENT_BINARY_DIR}/pi
